__archive__/motif2/packages/ink_stroke_modeler/lib/src/bindings.g.dart

// ignore_for_file: camel_case_types, non_constant_identifier_names, unused_element, unused_field, return_of_invalid_type, void_checks, annotate_overrides, no_leading_underscores_for_local_identifiers, library_private_types_in_public_api

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:ink_stroke_modeler/ink_stroke_modeler.dart')
library;

import 'dart:ffi' as ffi;
import '' as self;

@ffi.Native<ffi.Pointer<InkStrokeModeler> Function()>()
external ffi.Pointer<InkStrokeModeler> ink_stroke_modeler_create();

@ffi.Native<ffi.Void Function(ffi.Pointer<InkStrokeModeler>)>()
external void ink_stroke_modeler_destroy(
  ffi.Pointer<InkStrokeModeler> modeler,
);

@ffi.Native<ffi.Bool Function(ffi.Pointer<InkStrokeModeler>, StrokeModelerParams)>()
external bool ink_stroke_modeler_reset(
  ffi.Pointer<InkStrokeModeler> modeler,
  StrokeModelerParams params,
);

@ffi.Native<ffi.Size Function(ffi.Pointer<InkStrokeModeler>, InkInput, ffi.Pointer<ffi.Pointer<InkResult>>)>()
external int ink_stroke_modeler_update(
  ffi.Pointer<InkStrokeModeler> modeler,
  InkInput input,
  ffi.Pointer<ffi.Pointer<InkResult>> out_results,
);

@ffi.Native<ffi.Size Function(ffi.Pointer<InkStrokeModeler>, ffi.Pointer<ffi.Pointer<InkResult>>)>()
external int ink_stroke_modeler_predict(
  ffi.Pointer<InkStrokeModeler> modeler,
  ffi.Pointer<ffi.Pointer<InkResult>> out_results,
);

@ffi.Native<ffi.Void Function()>()
external void a();

const addresses = _SymbolAddresses();

class _SymbolAddresses {
  const _SymbolAddresses();
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<InkStrokeModeler>)>> get ink_stroke_modeler_destroy =>
      ffi.Native.addressOf(self.ink_stroke_modeler_destroy);
}

typedef __int8_t = ffi.SignedChar;
typedef Dart__int8_t = int;
typedef __uint8_t = ffi.UnsignedChar;
typedef Dart__uint8_t = int;
typedef __int16_t = ffi.Short;
typedef Dart__int16_t = int;
typedef __uint16_t = ffi.UnsignedShort;
typedef Dart__uint16_t = int;
typedef __int32_t = ffi.Int;
typedef Dart__int32_t = int;
typedef __uint32_t = ffi.UnsignedInt;
typedef Dart__uint32_t = int;
typedef __int64_t = ffi.LongLong;
typedef Dart__int64_t = int;
typedef __uint64_t = ffi.UnsignedLongLong;
typedef Dart__uint64_t = int;
typedef __darwin_intptr_t = ffi.Long;
typedef Dart__darwin_intptr_t = int;
typedef __darwin_natural_t = ffi.UnsignedInt;
typedef Dart__darwin_natural_t = int;
typedef __darwin_ct_rune_t = ffi.Int;
typedef Dart__darwin_ct_rune_t = int;

final class __mbstate_t extends ffi.Union {
  @ffi.Array.multi([128])
  external ffi.Array<ffi.Char> __mbstate8;

  @ffi.LongLong()
  external int _mbstateL;
}

typedef __darwin_mbstate_t = __mbstate_t;
typedef __darwin_ptrdiff_t = ffi.Long;
typedef Dart__darwin_ptrdiff_t = int;
typedef __darwin_size_t = ffi.UnsignedLong;
typedef Dart__darwin_size_t = int;
typedef __builtin_va_list = ffi.Pointer<ffi.Char>;
typedef __darwin_va_list = __builtin_va_list;
typedef __darwin_wchar_t = ffi.Int;
typedef Dart__darwin_wchar_t = int;
typedef __darwin_rune_t = __darwin_wchar_t;
typedef __darwin_wint_t = ffi.Int;
typedef Dart__darwin_wint_t = int;
typedef __darwin_clock_t = ffi.UnsignedLong;
typedef Dart__darwin_clock_t = int;
typedef __darwin_socklen_t = __uint32_t;
typedef __darwin_ssize_t = ffi.Long;
typedef Dart__darwin_ssize_t = int;
typedef __darwin_time_t = ffi.Long;
typedef Dart__darwin_time_t = int;
typedef __darwin_blkcnt_t = __int64_t;
typedef __darwin_blksize_t = __int32_t;
typedef __darwin_dev_t = __int32_t;
typedef __darwin_fsblkcnt_t = ffi.UnsignedInt;
typedef Dart__darwin_fsblkcnt_t = int;
typedef __darwin_fsfilcnt_t = ffi.UnsignedInt;
typedef Dart__darwin_fsfilcnt_t = int;
typedef __darwin_gid_t = __uint32_t;
typedef __darwin_id_t = __uint32_t;
typedef __darwin_ino64_t = __uint64_t;
typedef __darwin_ino_t = __darwin_ino64_t;
typedef __darwin_mach_port_name_t = __darwin_natural_t;
typedef __darwin_mach_port_t = __darwin_mach_port_name_t;
typedef __darwin_mode_t = __uint16_t;
typedef __darwin_off_t = __int64_t;
typedef __darwin_pid_t = __int32_t;
typedef __darwin_sigset_t = __uint32_t;
typedef __darwin_suseconds_t = __int32_t;
typedef __darwin_uid_t = __uint32_t;
typedef __darwin_useconds_t = __uint32_t;

final class __darwin_pthread_handler_rec extends ffi.Struct {
  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>> __routine;

  external ffi.Pointer<ffi.Void> __arg;

  external ffi.Pointer<__darwin_pthread_handler_rec> __next;
}

final class _opaque_pthread_attr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_cond_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([40])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_condattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutex_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([56])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_mutexattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_once_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([8])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlock_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([192])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_rwlockattr_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  @ffi.Array.multi([16])
  external ffi.Array<ffi.Char> __opaque;
}

final class _opaque_pthread_t extends ffi.Struct {
  @ffi.Long()
  external int __sig;

  external ffi.Pointer<__darwin_pthread_handler_rec> __cleanup_stack;

  @ffi.Array.multi([8176])
  external ffi.Array<ffi.Char> __opaque;
}

typedef __darwin_pthread_attr_t = _opaque_pthread_attr_t;
typedef __darwin_pthread_cond_t = _opaque_pthread_cond_t;
typedef __darwin_pthread_condattr_t = _opaque_pthread_condattr_t;
typedef __darwin_pthread_key_t = ffi.UnsignedLong;
typedef Dart__darwin_pthread_key_t = int;
typedef __darwin_pthread_mutex_t = _opaque_pthread_mutex_t;
typedef __darwin_pthread_mutexattr_t = _opaque_pthread_mutexattr_t;
typedef __darwin_pthread_once_t = _opaque_pthread_once_t;
typedef __darwin_pthread_rwlock_t = _opaque_pthread_rwlock_t;
typedef __darwin_pthread_rwlockattr_t = _opaque_pthread_rwlockattr_t;
typedef __darwin_pthread_t = ffi.Pointer<_opaque_pthread_t>;
typedef __darwin_nl_item = ffi.Int;
typedef Dart__darwin_nl_item = int;
typedef __darwin_wctrans_t = ffi.Int;
typedef Dart__darwin_wctrans_t = int;
typedef __darwin_wctype_t = __uint32_t;
typedef u_int8_t = ffi.UnsignedChar;
typedef Dartu_int8_t = int;
typedef u_int16_t = ffi.UnsignedShort;
typedef Dartu_int16_t = int;
typedef u_int32_t = ffi.UnsignedInt;
typedef Dartu_int32_t = int;
typedef u_int64_t = ffi.UnsignedLongLong;
typedef Dartu_int64_t = int;
typedef register_t = ffi.Int64;
typedef Dartregister_t = int;
typedef user_addr_t = u_int64_t;
typedef user_size_t = u_int64_t;
typedef user_ssize_t = ffi.Int64;
typedef Dartuser_ssize_t = int;
typedef user_long_t = ffi.Int64;
typedef Dartuser_long_t = int;
typedef user_ulong_t = u_int64_t;
typedef user_time_t = ffi.Int64;
typedef Dartuser_time_t = int;
typedef user_off_t = ffi.Int64;
typedef Dartuser_off_t = int;
typedef syscall_arg_t = u_int64_t;
typedef ptrdiff_t = __darwin_ptrdiff_t;
typedef rsize_t = __darwin_size_t;
typedef wint_t = __darwin_wint_t;

final class InkStrokeModeler extends ffi.Opaque {}

enum InkEventType {
  INK_EVENT_DOWN(0),
  INK_EVENT_MOVE(1),
  INK_EVENT_UP(2);

  final int value;
  const InkEventType(this.value);

  static InkEventType fromValue(int value) => switch (value) {
    0 => INK_EVENT_DOWN,
    1 => INK_EVENT_MOVE,
    2 => INK_EVENT_UP,
    _ => throw ArgumentError('Unknown value for InkEventType: $value'),
  };
}

final class InkInput extends ffi.Struct {
  @ffi.UnsignedInt()
  external int event_typeAsInt;

  InkEventType get event_type => InkEventType.fromValue(event_typeAsInt);

  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Double()
  external double time_seconds;

  @ffi.Float()
  external double pressure;

  @ffi.Float()
  external double tilt;

  @ffi.Float()
  external double orientation;
}

final class InkResult extends ffi.Struct {
  @ffi.Float()
  external double x;

  @ffi.Float()
  external double y;

  @ffi.Float()
  external double velocity_x;

  @ffi.Float()
  external double velocity_y;

  @ffi.Double()
  external double time_seconds;

  @ffi.Float()
  external double pressure;

  @ffi.Float()
  external double tilt;

  @ffi.Float()
  external double orientation;
}

final class WobbleSmootherParams extends ffi.Struct {
  @ffi.Bool()
  external bool is_enabled;

  @ffi.Double()
  external double timeout_seconds;

  @ffi.Float()
  external double speed_floor;

  @ffi.Float()
  external double speed_ceiling;
}

final class LoopContractionMitigationParams extends ffi.Struct {
  @ffi.Bool()
  external bool is_enabled;

  @ffi.Float()
  external double speed_lower_bound;

  @ffi.Float()
  external double speed_upper_bound;

  @ffi.Float()
  external double interpolation_strength_at_speed_lower_bound;

  @ffi.Float()
  external double interpolation_strength_at_speed_upper_bound;

  @ffi.Double()
  external double min_speed_sampling_window_seconds;
}

final class PositionModelerParams extends ffi.Struct {
  @ffi.Float()
  external double spring_mass_constant;

  @ffi.Float()
  external double drag_constant;

  external LoopContractionMitigationParams loop_contraction_mitigation_params;
}

final class SamplingParams extends ffi.Struct {
  @ffi.Double()
  external double min_output_rate;

  @ffi.Float()
  external double end_of_stroke_stopping_distance;

  @ffi.Int()
  external int end_of_stroke_max_iterations;

  @ffi.Int()
  external int max_outputs_per_call;

  @ffi.Double()
  external double max_estimated_angle_to_traverse_per_input;
}

final class StylusStateModelerParams extends ffi.Struct {
  @ffi.Bool()
  external bool use_stroke_normal_projection;
}

enum PredictorType {
  PREDICTOR_TYPE_DISABLED(0),
  PREDICTOR_TYPE_KALMAN(1),
  PREDICTOR_TYPE_STROKE_END(2);

  final int value;
  const PredictorType(this.value);

  static PredictorType fromValue(int value) => switch (value) {
    0 => PREDICTOR_TYPE_DISABLED,
    1 => PREDICTOR_TYPE_KALMAN,
    2 => PREDICTOR_TYPE_STROKE_END,
    _ => throw ArgumentError('Unknown value for PredictorType: $value'),
  };
}

final class KalmanPredictorConfidenceParams extends ffi.Struct {
  @ffi.Int()
  external int desired_number_of_samples;

  @ffi.Float()
  external double max_estimation_distance;

  @ffi.Float()
  external double min_travel_speed;

  @ffi.Float()
  external double max_travel_speed;

  @ffi.Float()
  external double max_linear_deviation;

  @ffi.Float()
  external double baseline_linearity_confidence;
}

final class KalmanPredictorParams extends ffi.Struct {
  @ffi.Double()
  external double process_noise;

  @ffi.Double()
  external double measurement_noise;

  @ffi.Int()
  external int min_stable_iteration;

  @ffi.Int()
  external int max_time_samples;

  @ffi.Float()
  external double min_catchup_velocity;

  @ffi.Float()
  external double acceleration_weight;

  @ffi.Float()
  external double jerk_weight;

  @ffi.Double()
  external double prediction_interval_seconds;

  external KalmanPredictorConfidenceParams confidence_params;
}

final class UnnamedUnion extends ffi.Union {
  external ffi.Pointer<ffi.Void> disabled;

  external ffi.Pointer<ffi.Void> stroke_end;

  external KalmanPredictorParams kalman;
}

final class PredictorParams extends ffi.Struct {
  @ffi.UnsignedInt()
  external int typeAsInt;

  PredictorType get type => PredictorType.fromValue(typeAsInt);

  external UnnamedUnion unnamed;
}

final class StrokeModelerParams extends ffi.Struct {
  external WobbleSmootherParams wobble_smoother_params;

  external PositionModelerParams position_modeler_params;

  external SamplingParams sampling_params;

  external StylusStateModelerParams stylus_state_modeler_params;

  external PredictorParams prediction_params;
}

const int __bool_true_false_are_defined = 1;

const int true$ = 1;

const int false$ = 0;

const int __has_safe_buffers = 1;

const int __DARWIN_ONLY_64_BIT_INO_T = 1;

const int __DARWIN_ONLY_UNIX_CONFORMANCE = 1;

const int __DARWIN_ONLY_VERS_1050 = 1;

const int __DARWIN_UNIX03 = 1;

const int __DARWIN_64_BIT_INO_T = 1;

const int __DARWIN_VERS_1050 = 1;

const int __DARWIN_NON_CANCELABLE = 0;

const String __DARWIN_SUF_EXTSN = '\$DARWIN_EXTSN';

const int __DARWIN_C_ANSI = 4096;

const int __DARWIN_C_FULL = 900000;

const int __DARWIN_C_LEVEL = 900000;

const int __STDC_WANT_LIB_EXT1__ = 1;

const int __DARWIN_NO_LONG_LONG = 0;

const int _DARWIN_FEATURE_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_64_BIT_INODE = 1;

const int _DARWIN_FEATURE_ONLY_VERS_1050 = 1;

const int _DARWIN_FEATURE_ONLY_UNIX_CONFORMANCE = 1;

const int _DARWIN_FEATURE_UNIX_CONFORMANCE = 3;

const int __has_ptrcheck = 0;

const int __DARWIN_NULL = 0;

const int __PTHREAD_SIZE__ = 8176;

const int __PTHREAD_ATTR_SIZE__ = 56;

const int __PTHREAD_MUTEXATTR_SIZE__ = 8;

const int __PTHREAD_MUTEX_SIZE__ = 56;

const int __PTHREAD_CONDATTR_SIZE__ = 8;

const int __PTHREAD_COND_SIZE__ = 40;

const int __PTHREAD_ONCE_SIZE__ = 8;

const int __PTHREAD_RWLOCK_SIZE__ = 192;

const int __PTHREAD_RWLOCKATTR_SIZE__ = 16;

const int __DARWIN_WCHAR_MAX = 2147483647;

const int __DARWIN_WCHAR_MIN = -2147483648;

const int __DARWIN_WEOF = -1;

const int _FORTIFY_SOURCE = 2;

const int NULL = 0;

const int USER_ADDR_NULL = 0;
